<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEDB3"
    tools:context=".LoginScreen.UserLoginFragment">


  <TextView
      android:id="@+id/tvTitle"
      android:layout_marginTop="160dp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:textSize="35sp"
      android:text="User Login"/>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/etPassword"
        android:text="@string/login_button"/>

    <Button
        android:id="@+id/adminBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/admin_button" />

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/etUsername"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:layout_above="@+id/etPassword"
      android:layout_centerHorizontal="true"
      android:layout_marginBottom="23dp"
      android:ems="10"
      android:inputType="textPersonName" >

      <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/username" />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/etPassword"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:ems="10">

  <com.google.android.material.textfield.TextInputEditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/password"
      android:inputType="textPassword"/>

  </com.google.android.material.textfield.TextInputLayout>

  <Button
      android:id="@+id/skip"
      android:layout_width="150dp"
      android:layout_height="wrap_content"
      android:text="Skip to app >>"
      android:layout_alignParentBottom="true"
      android:layout_alignParentRight="true" />

</RelativeLayout>